# custom_text_embeddings

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: lib.rs  main.rs
src/embedder/: mod.rs  qwen3embedder.rs  qwen_embedder.rs
src/turso_db/: data.db  data.db-shm  data.db-wal  mod.rs  turso_db.rs
